--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Jekyll configuration
 
-name: My blog
-description: A jekyll theme
+name: Reading List
+description: Academic reading list
 
 # url is currently only used only for the RSS feed in feed.xml
 url: http://scotte.github.io
@@ -10,10 +10,10 @@ url: http://scotte.github.io
 # be the project name.
 # *** IMPORTANT: If your local "jekyll serve" throws errors change this to '' or
 #     run it like so: jekyll serve --baseurl=''
-baseurl: /jekyll-clean
+baseurl: /reading_list
 
 # This can be '' to hide the Github nav button
-github: 'scotte/jekyll-clean'
+github: 'allenyin/reading_list'
 
 # Set this to your UA-# value, or '' to disable the block completely
 gaaccount: ''
