Ripped out some extra stuff from the original theme

--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,10 @@ gaaccount: ''
 # setting below must also be true. Individual posts can override 'comments' to
 # disable on a post-by-post basis
 disqus: ''
-comments: true
+comments: false
 
 permalink: /:year/:month/:title
-paginate: 3
+paginate: 20
 
 highlighter: pygments
 markdown: redcarpet
