Changed _config, gh_pages work please!

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,9 @@ url: http://allenyin.github.io/reading_list
 # be the project name.
 # *** IMPORTANT: If your local "jekyll serve" throws errors change this to '' or
 #     run it like so: jekyll serve --baseurl=''
-baseurl: ''
+
+#baseurl: '' # for local
+basurl: /reading_list # for gh_pages
 
 # This can be '' to hide the Github nav button
 github: 'allenyin/reading_list'
