--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: http://allenyin.github.io/reading_list
 #     run it like so: jekyll serve --baseurl=''
 
 #baseurl: '' # for local
-basurl: /reading_list # for gh_pages
+basurl: '/reading_list' # for gh_pages
 
 # This can be '' to hide the Github nav button
 github: 'allenyin/reading_list'
