--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,9 @@ paginate: 20
 
 highlighter: pygments
 markdown: kramdown
+kramdown:
+    input: GFM
 redcarpet:
-  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data", "strikethrough"]
 
 exclude: ['README.md', 'LICENSE']
