--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl: '/reading_list'
 github: 'allenyin/reading_list'
 
 # Set this to your UA-# value, or '' to disable the block completely
-gaaccount: ''
+gaaccount: UA-108068754-1
 
 # Set this to your disqus shortname to enable comments. Note that the 'comments'
 # setting below must also be true. Individual posts can override 'comments' to
@@ -44,7 +44,3 @@ kramdown:
     #        start_line: 1
 
 exclude: ['README.md', 'LICENSE']
-
-# google analytics account: used in analytics.html
-gaacount: UA-108068754-1
-
